Se arreglo el problema de que no redirigia a la pagina de crear tweet

--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,11 +1,4 @@
-#<h2 class="py-2 mb-0">Nuevo Tweet</h2>
+<h2 class="py-2 mb-0">Nuevo Tweet</h2>
 
-#<%= render "form", tweet: @tweet %>
+<%= render "form", tweet: @tweet %>
 
- <%= tweet = Tweet.new %>
-<%= form_with model: tweet do |f| %>
-  <%= f.text_area :content, placeholder: "¿Qué está pasando?",
-    size: "60x10" %>
-
-  <%= f.submit "Twittear" %>
-<% end %>
